--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "morgan": "^1.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-materialize": "^2.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "serve-favicon": "^2.5.0",
