--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^5.1.2",
     "morgan": "^1.9.0",
     "react": "^16.3.2",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.3.2",
     "react-materialize": "^2.2.1",
     "react-router-dom": "^4.2.2",
