--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-materialize": "^2.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "request": "^2.87.0",
     "serve-favicon": "^2.5.0",
+    "xml": "^1.0.1",
     "xml2js": "^0.4.19"
   },
   "scripts": {
